--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -33,7 +33,8 @@
 }
 
 .app__navbar-links li:hover {
-  color: var(--color-grey)
+  color: var(--color-grey);
+  transition: 0.5s ease;
 }
 
 .app__navbar-login {
@@ -45,11 +46,11 @@
 .app__navbar-login a {
   margin: 0 1rem;
   text-decoration: none;
-  transition: 0.5s ease;
 }
 
 .app__navbar-login a:hover {
   border-bottom: 1px solid var(--color-golden);
+  transition: 0.5s ease;
 }
 
 .app__navbar-login div {
@@ -69,7 +70,7 @@
   width: 100%;
   height: 100vh;
   background: var(--color-black);
-  transition: 0.5s ease;
+  transition: opacity 0.5s ease;
 
   flex-direction: column;
   z-index: 5;;
@@ -85,6 +86,29 @@
   right: 20px;
 }
 
+.app__navbar-smallscreen_links {
+  list-style: none;
+}
+
+.app__navbar-smallscreen_links li {
+  margin: 2rem;
+  cursor: pointer;
+  color: var(--color-golden);
+  font-size: 2rem;
+  text-align: center;
+  font-family: var(--font-base);
+}
+
+.app__navbar-smallscreen_links li:hover {
+  color: var(--color-white);
+}
+
+@media screen and (max-width: 2000px) {
+  .app__navbar-logo img {
+    width: 210px;
+  }
+}
+
 @media screen and (max-width: 1150px) {
   .app__navbar-links {
     display: none;
@@ -92,5 +116,19 @@
 
   .app__navbar-smallscreen {
     display: flex;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .app__navbar {
+    padding: 1rem;
+  }
+
+  .app__navbar-login {
+    display: none;
+  }
+
+  .app__navbar-logo img {
+    width: 110px;
   }
 }
