--- a/src/container/Header/Header.css
+++ b/src/container/Header/Header.css
@@ -7,10 +7,17 @@
   color: var(--color-golden);
   letter-spacing: 0.04em;
   text-transform: uppercase;
-  line-height:117px;
-  font-size: 90px;
+  line-height:88px;
+  font-size: 100px;
 }
 
-.app__header-img {
+.app__header-img img {
   width: 80%;
+}
+
+@media screen and (max-width: 650px) {
+  .app__header-h1 {
+    line-height: 50px;
+    font-size: 60px
+  }
 }
