tweaked menu styles

--- a/src/components/Menuitem/MenuItem.css
+++ b/src/components/Menuitem/MenuItem.css
@@ -30,6 +30,6 @@
 
 .app__menuitem-price {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   align-items: flex-end;
 }
